Details page fixes. Check API, UI Controllers

--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Create.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model WEB_253503_Soroka.UI.Areas.Admin.Pages.Shows.CreateModel
+@model WEB_253503_Soroka.UI.Areas.Admin.Pages.CreateModel
 
 @{
     ViewData["Title"] = "Create";
