--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Details.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model WEB_253503_Soroka.UI.Areas.Admin.Pages.Shows.DetailsModel
+@model WEB_253503_Soroka.UI.Areas.Admin.Pages.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
