--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Delete.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Delete.cshtml
@@ -1,46 +1,46 @@
-@* @page *@
-@* @model WEB_253503_Soroka.UI.Areas.Admin.Pages.Shows.DeleteModel *@
-@* *@
-@* @{ *@
-@*     ViewData["Title"] = "Delete"; *@
-@* } *@
-@* *@
-@* <h1>Delete</h1> *@
-@* *@
-@* <h3>Are you sure you want to delete this?</h3> *@
-@* <div> *@
-@*     <h4>Show</h4> *@
-@*     <hr /> *@
-@*     <dl class="row"> *@
-@*         <dt class="col-sm-2"> *@
-@*             @Html.DisplayNameFor(model => model.Show.Name) *@
-@*         </dt> *@
-@*         <dd class="col-sm-10"> *@
-@*             @Html.DisplayFor(model => model.Show.Name) *@
-@*         </dd> *@
-@*         <dt class="col-sm-2"> *@
-@*             @Html.DisplayNameFor(model => model.Show.Description) *@
-@*         </dt> *@
-@*         <dd class="col-sm-10"> *@
-@*             @Html.DisplayFor(model => model.Show.Description) *@
-@*         </dd> *@
-@*         <dt class="col-sm-2"> *@
-@*             @Html.DisplayNameFor(model => model.Show.Price) *@
-@*         </dt> *@
-@*         <dd class="col-sm-10"> *@
-@*             @Html.DisplayFor(model => model.Show.Price) *@
-@*         </dd> *@
-@*         <dt class="col-sm-2"> *@
-@*             @Html.DisplayNameFor(model => model.Show.Image) *@
-@*         </dt> *@
-@*         <dd class="col-sm-10"> *@
-@*             @Html.DisplayFor(model => model.Show.Image) *@
-@*         </dd> *@
-@*     </dl> *@
-@*      *@
-@*     <form method="post"> *@
-@*         <input type="hidden" asp-for="Show.Id" /> *@
-@*         <input type="submit" value="Delete" class="btn btn-danger" /> | *@
-@*         <a asp-page="./Index">Back to List</a> *@
-@*     </form> *@
-@* </div> *@
+@page
+@model WEB_253503_Soroka.UI.Areas.Admin.Pages.DeleteModel
+
+@{
+    ViewData["Title"] = "Delete";
+}
+
+<h1>Delete</h1>
+
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Show</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Show.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Show.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Show.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Show.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Show.Price)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Show.Price)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Show.Image)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Show.Image)
+        </dd>
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="Show.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
+</div>
