--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Index.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model WEB_253503_Soroka.UI.Areas.Admin.Pages.Shows.IndexModel
+@model WEB_253503_Soroka.UI.Areas.Admin.Pages.IndexModel
 
 @{
     ViewData["Title"] = "Index";
@@ -12,43 +12,46 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Show[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Show[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Show[0].Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Show[0].Image)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Show[0].Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Show[0].Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Show[0].Price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Show[0].Image)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Show) {
+    @foreach (var item in Model.Show)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                <div>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </div>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
+                <img src="@item.Image" style="max-width:100px; max-height:100px;"/>
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Edit</a>
+                <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Details</a>
+                <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
