--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Create.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Create.cshtml
@@ -8,33 +8,42 @@
 <h1>Create</h1>
 
 <h4>Show</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Show.Name" class="control-label"></label>
-                <input asp-for="Show.Name" class="form-control" />
+                <input asp-for="Show.Name" class="form-control"/>
                 <span asp-validation-for="Show.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Show.Description" class="control-label"></label>
-                <input asp-for="Show.Description" class="form-control" />
+                <input asp-for="Show.Description" type="text" class="form-control"/>
                 <span asp-validation-for="Show.Description" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="ChosenGenreId" class="control-label"></label>
+                <select asp-for="ChosenGenreId" class="form-control" asp-items="@(new SelectList(Model.Genres, nameof(Genre.Id), nameof(Genre.NormalizedName)))">
+
+                </select>
+                <span asp-validation-for="ChosenGenreId" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Show.Price" class="control-label"></label>
-                <input asp-for="Show.Price" class="form-control" />
+                <input asp-for="Show.Price" class="form-control"/>
                 <span asp-validation-for="Show.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Show.Image" class="control-label"></label>
-                <input asp-for="Show.Image" class="form-control" />
+                <input asp-for="Show.Image" type="file" class="form-control"/>
                 <span asp-validation-for="Show.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -43,4 +52,3 @@
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
-
