--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Details.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Details.cshtml
@@ -9,7 +9,7 @@
 
 <div>
     <h4>Show</h4>
-    <hr />
+    <hr/>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Show.Name)
@@ -30,10 +30,16 @@
             @Html.DisplayFor(model => model.Show.Price)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Show.Genre)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Show.Genre)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Show.Image)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Show.Image)
+            <img src="@Model.Show.Image" style="max-width: 300px; max-height: 300px"/>
         </dd>
     </dl>
 </div>
