--- a/WEB_253503_Soroka.UI/Areas/Admin/Pages/Create.cshtml
+++ b/WEB_253503_Soroka.UI/Areas/Admin/Pages/Create.cshtml
@@ -11,7 +11,7 @@
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Show.Name" class="control-label"></label>
@@ -27,7 +27,6 @@
             <div class="form-group">
                 <label asp-for="ChosenGenreId" class="control-label"></label>
                 <select asp-for="ChosenGenreId" class="form-control" asp-items="@(new SelectList(Model.Genres, nameof(Genre.Id), nameof(Genre.NormalizedName)))">
-
                 </select>
                 <span asp-validation-for="ChosenGenreId" class="text-danger"></span>
             </div>
@@ -38,8 +37,8 @@
                 <span asp-validation-for="Show.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Show.Image" class="control-label"></label>
-                <input asp-for="Show.Image" type="file" class="form-control"/>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" type="file" class="form-control"/>
                 <span asp-validation-for="Show.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
