--- a/WEB_253503_Soroka.UI/Views/_ViewImports.cshtml
+++ b/WEB_253503_Soroka.UI/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using WEB_253503_Soroka.Domain.Entities
 @using WEB_253503_Soroka.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WEB_253503_Soroka.UI
